--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,42 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blanco Raul
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+<ion-menu content-id="main-content">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v3">docs</a> will be your guide.
-  </p>
-</ion-content>
+  <ion-content>
+    <ion-list>
+      <ion-list-header>
+        Navigate
+      </ion-list-header>
+      <ion-menu-toggle auto-hide="false">
+        <ion-item button>
+          <ion-icon slot="start" name='home'></ion-icon>
+          <ion-label>
+            Home
+          </ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-page class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-toggle>
+          <ion-button>
+            <ion-icon slot="icon-only" name="menu"></ion-icon>
+          </ion-button>
+        </ion-menu-toggle>
+      </ion-buttons>
+      <ion-title>Header</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">
+    <h1>Main Content</h1>
+    <p>Click the icon in the top left to toggle the menu.</p>
+  </ion-content>
+</ion-page>
